# MeowCut

./: .clang-format  .gitignore  CMakeLists.txt  README.md  code_style.md  meowcut.sln
app/: CMakeLists.txt
app/src/: main.cpp
app/src/MeowGLWidget/: MeowGLWidget.cpp  MeowGLWidget.h  MeowGLWidget.ui
app/src/meowcut/: MeowGLWidget.cpp  MeowGLWidget.h  main.cpp  meowcut.cpp  meowcut.h  meowcut.qrc  meowcut.ui  meowcut.vcxproj  meowcut.vcxproj.filters
core/: CMakeLists.txt  avcodecwidget.sln  meowcutcore.sln
core/avcodec_demo/: CMakeLists.txt  avcodec.h  avcodec.qrc  avcodec.ui  main.cpp
core/design/: meow_audio_clip.h  meow_audio_layer.h  meow_audio_layer_group.h  meow_canvas_layer.h  meow_caption_effect.h  meow_common.h  meow_editor_layer.h  meow_effect_layer.h  meow_effect_layer_group.h  meow_engine.h  meow_engine_controller.h  meow_move_session.h  meow_object.h  meow_pip_layer.h  meow_pip_layer_group.h  meow_sticker_effect.h  meow_tracing_context.h  meow_unit_factory.h  meow_video_clip.h
core/include/: README.md  meow_audio_clip.h  meow_audio_layer.h  meow_audio_layer_group.h  meow_canvas_layer.h  meow_caption_effect.h  meow_common.h  meow_editor_layer.h  meow_effect_layer.h  meow_effect_layer_group.h  meow_engine.h  meow_engine_controller.h  meow_move_session.h  meow_pip_layer.h  meow_pip_layer_group.h  meow_status_code.h  meow_sticker_effect.h  meow_unit_factory.h  meow_video_clip.h  meowi_audio_clip.h  meowi_audio_layer.h  meowi_audio_layer_group.h  meowi_canvas_layer.h  meowi_caption_effect.h  meowi_common.h  meowi_core.h  meowi_editor_layer.h  meowi_effect_layer.h  meowi_effect_layer_group.h  meowi_engine.h  meowi_engine_controller.h  meowi_engine_factory.h  meowi_move_session.h  meowi_pip_layer.h  meowi_pip_layer_group.h  meowi_status_code.h  meowi_sticker_effect.h  meowi_tracing_context.h  meowi_unit_factory.h  meowi_video_clip.h
core/include/avcodec/: avcodec.h  avcodec_global.h
core/include/meowcutcore/: meowcutcore.h  meowcutcore_global.h
core/proxy/: meowi_audio_clip.cc  meowi_audio_layer.cc  meowi_audio_layer_group.cc  meowi_canvas_layer.cc  meowi_caption_effect.cc  meowi_converter.h  meowi_editor_layer.cc  meowi_effect_layer.cc  meowi_effect_layer_group.cc  meowi_engine.cc  meowi_engine_controller.cc  meowi_engine_factory.cc  meowi_pip_layer.cc  meowi_pip_layer_group.cc  meowi_sticker_effect.cc  meowi_tracing_context.cc  meowi_unit_factory.cc  meowi_video_clip.cc
core/proxy_include/: meow_audio_clip.h  meow_audio_layer.h  meow_audio_layer_group.h  meow_canvas_layer.h  meow_caption_effect.h  meow_common.h  meow_core.h  meow_editor_layer.h  meow_effect_layer.h  meow_effect_layer_group.h  meow_engine.h  meow_engine_controller.h  meow_engine_factory.h  meow_move_session.h  meow_pip_layer.h  meow_pip_layer_group.h  meow_status_code.h  meow_sticker_effect.h  meow_tracing_context.h  meow_unit_factory.h  meow_video_clip.h
core/src/: CMakeLists.txt  main.cpp
core/src/audio_effect/: audio_effect.h
core/src/avcodec/: avcodec.cpp  avcodec.h  avcodec.vcxproj  avcodec.vcxproj.filters  meow_avdecoder.h
core/src/avcodec/demo/: avcodec.cpp  avcodec.h
core/src/avcodecwidget/: AVCodecWidget.vcxproj  AVCodecWidget.vcxproj.filters  avcodecwidget.cpp  avcodecwidget.h  avcodecwidget.qrc  avcodecwidget.ui  main.cpp
core/src/avsync/: avsync.h
core/src/common/: meow_audio_frame.h  meow_ret_code.h  meow_texture.h  meow_video_frame.h
core/src/gl_manager/: CMakeLists.txt  meow_gl_context.h  meow_texture_pool.h
core/src/image_filter/: image_filter.h
core/src/meowcut_core/: meowcut_core.cpp  meowcut_core.h
core/src/meowcutcore/: meowcutcore.cpp  meowcutcore.h  meowcutcore.vcxproj  meowcutcore.vcxproj.filters
core/src/video_render/: meow_animator.h  meow_imageFilter.h  video_render.h
doc/: code_style.md
